# tradingbox

./: .clang-format  .gitattributes  CMakeLists.txt  DataType.h  LICENSE  README.md  TradeDemo.cpp  TradeEngine.cpp  TradeEngine.h  TradeGateway.cpp  TradeGateway.h
.github/workflows/: ccpp.yml
api/esunny/TapQuoteAPI/: TapQuoteAPI.chm  Version.txt
api/esunny/iTapTradeApi/: Version.txt
api/esunny/iTapTradeApi/include/: iTapAPICommDef.h  iTapAPIError.h  iTapTradeAPI.h  iTapTradeAPIDataType.h
api/sfit/ctp_sopt/: ThostFtdcTraderApi.h  ThostFtdcUserApiStruct.h  error.xml
gateway/: CtpTradeGateway.cpp  CtpTradeGateway.h  EsunnyTradeGateway.cpp  EsunnyTradeGateway.h
